update getLoveTweetsByUserID api become getTweetsByUserID api with many aciton such as Love, Bookmark, Repost
