# docs/swagger.json
@@ -244,7 +244,7 @@
         },
         "/tweet/love": {
             "get": {
-                "description": "Get Love Tweets By UserID",
+                "description": "Get Tweets By UserID and Action",
                 "consumes": [
                     "application/json"
                 ],
@@ -254,7 +254,7 @@
                 "tags": [
                     "Tweet"
                 ],
-                "summary": "GetLoveTweetsByUserID",
+                "summary": "GetActionTweetsByUserID",
                 "parameters": [
                     {
                         "type": "string",
@@ -267,6 +267,13 @@
                         "type": "integer",
                         "description": "User ID",
                         "name": "userID",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Action",
+                        "name": "action",
                         "in": "query",
                         "required": true
                     },
